# home

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml
apps/feid/: Cargo.toml  bindings.ts  package.json
apps/feid/src/: database.rs  error.rs
apps/feid/src/bins/: server.rs
apps/feid/src/http/: context.rs  mod.rs
apps/feid/src/http/controllers/: authentication.rs  lobby.rs  mod.rs
apps/feid/src/http/routers/: lobby.rs  mod.rs
apps/feid/src/lobby/: lobby.rs  manager.rs  mod.rs
apps/leetcode/: Cargo.toml
apps/leetcode/src/: main.rs
apps/media/: Cargo.toml
apps/media/src/: main.rs
apps/media/src/downloader/: download.rs  manager.rs  mod.rs
apps/talky/: package.json  tailwind.config.ts
apps/talky-api/: Cargo.toml  README.md  bindings.ts  jwt.public.pem
apps/talky-api/src/: lib.rs
apps/talky-api/src/bins/: server.rs
apps/talky-api/src/http/: context.rs
apps/talky-api/src/http/controllers/: authentication.rs  category.rs  channel.rs  lobby.rs  mod.rs  niche.rs
apps/talky-api/src/http/routers/: authentication.rs  category.rs  channel.rs  lobby.rs  mod.rs  niche.rs
apps/talky-api/src/lobby/: lobby.rs  manager.rs
apps/talky-api/src/models/: error.rs  user.rs
apps/talky-api/src/services/: jwt.rs
apps/talky-soundhouse/: Cargo.toml  package.json  types.d.ts
apps/talky-soundhouse/src/: config.rs  error.rs  handler.rs  lib.rs  lobby.rs  main.rs  message.rs  server.rs  state.rs
apps/talky-soundhouse/src/bins/: export-types.rs  server.rs
apps/talky-test/: Cargo.toml
apps/talky-test/src/: main.rs
apps/talky/src/: app.css  app.html
apps/talky/src-tauri/: Cargo.toml  tauri.conf.json
apps/talky/src-tauri/src/: audio.rs  commands.rs  config.rs  lib-what.rs  lib.rs  main.rs  recording.rs  rtc.rs  signal.rs  signaling.rs  utils.rs  webrtc.rs
apps/talky/src/lib/: channel-list.svelte.ts  client.ts  presence.svelte.ts  tauri.ts  user.svelte.ts
apps/talky/src/lib/channel-list/: channel-list.svelte
apps/talky/src/lib/chat-area/: chat-area.svelte
apps/talky/src/lib/components/app/layout/: channel-sidebar.svelte  chat-area.svelte  members-list.svelte  mobile-nav.svelte  server-sidebar.svelte
apps/talky/src/lib/components/app/lobby/: layout.svelte  lobby.svelte  lobby.ts
apps/talky/src/lib/components/channel/: channel.svelte
apps/talky/src/lib/components/niche/: channels-side.svelte  channels-sidebar.svelte  nav-main.svelte  niche.svelte
apps/talky/src/lib/components/settings/: settings-dialog.svelte  settings-sidebar.svelte
apps/talky/src/lib/components/settings/panels/: panel.svelte  voice-panel.svelte
apps/talky/src/lib/components/ui/avatar/: avatar-fallback.svelte  avatar-image.svelte  avatar.svelte  grouped-avatars.svelte
apps/talky/src/lib/components/ui/badge/: badge.svelte
apps/talky/src/lib/components/ui/button/: button.svelte
apps/talky/src/lib/components/ui/card/: card-content.svelte  card-footer.svelte  card-header.svelte  card.svelte
apps/talky/src/lib/components/ui/dialog/: dialog-content.svelte
apps/talky/src/lib/components/ui/dropdown-menu/: dropdown-menu-checkbox-item.svelte  dropdown-menu-content.svelte  dropdown-menu-item.svelte  dropdown-menu-radio-item.svelte  dropdown-menu-sub-trigger.svelte
apps/talky/src/lib/components/ui/input/: input.svelte
apps/talky/src/lib/components/ui/sheet/: index.ts  sheet-content.svelte  sheet-overlay.svelte
apps/talky/src/lib/components/ui/sidebar/: sidebar-content.svelte  sidebar-footer.svelte  sidebar-group-action.svelte  sidebar-group-label.svelte  sidebar-input.svelte  sidebar-inset.svelte  sidebar-menu-action.svelte  sidebar-menu-badge.svelte  sidebar-menu-button.svelte  sidebar-menu-skeleton.svelte  sidebar-menu-sub-button.svelte  sidebar-menu-sub.svelte  sidebar-menu.svelte  sidebar-provider.svelte  sidebar-rail.svelte  (+3 more)
apps/talky/src/lib/components/voice-control/: voice-control-panel.svelte
apps/talky/src/lib/layout/: channels-sidebar.svelte  header.svelte  layout.svelte
apps/talky/src/lib/news-list/: news-list.svelte
apps/talky/src/lib/rspc/: UntypedClient.ts  index.test.ts  index.ts  types.ts
apps/talky/src/lib/status-bar/: status-bar.svelte
apps/talky/src/lib/talky-server-selector/: talky-server-selector.svelte
apps/talky/src/lib/talky-server-settings/: talky-server-settings.svelte
apps/talky/src/lib/tauri/: microphone.ts  tauri.ts
apps/talky/src/lib/theme-provider/: theme-provider.svelte
apps/talky/src/lib/thread-list/: thread-list.svelte
apps/talky/src/lib/user-list/: user-list.svelte
apps/talky/src/lib/voice-controls/: voice-controls.svelte
apps/talky/src/routes/: +layout.svelte  +page.svelte
apps/talky/src/routes/lobby/[slug]/: +page.svelte
apps/talky/src/routes/login/: +page.svelte
apps/talky/src/routes/refresh-token/: +server.ts
apps/talky/src/routes/save-token/: +server.ts
apps/talky/src/routes/signup/: +page.svelte
apps/talky/static/: pcm-processor.js
infrastructure/talky/coturn/: Chart.yaml  values.yaml
infrastructure/talky/coturn/templates/: configmap.yaml  deployment.yaml
libs/auth/: Cargo.toml  jwt.private.pem  lib.rs
libs/data/: Cargo.toml  initial-migration.sql
libs/data/.sqlx/: query-9f86f1cd7062862f9246edd9d200e9f3a0911fca1e6a40ce666d0d36c487b86f.json  query-a3f4ce873dc20ac0ffd34c4ba197b7fc54cc0f78b60abe4d5b03b913c5b36572.json  query-fdc282622b8ee128c965256eb1b98288e82d42099fafdee0991cae4135e0bee7.json
libs/data/models/: user.rs
libs/services/: Cargo.toml  error.rs  lib.rs  pagination.rs  repository.rs
libs/services/.sqlx/: query-8db77895107ce6b5aab5df9215d7d9860051366ee0da5465333198d080961d30.json  query-be68dc27e5a3c16f318a475f88301519ab46d016c375e215dfba7612b4d14481.json  query-f37da11f1638d88636f5206ff59ab60ac701f9c83b89f463524a7e1c628d7f44.json
libs/services/category/: repository.rs  service.rs
libs/services/channel/: mod.rs  repository.rs  service.rs
libs/services/lobby/: repository.rs  service.rs
libs/services/message/: mod.rs  repository.rs  service.rs
libs/services/niche/: repository.rs  service.rs
libs/services/user/: repository.rs  service.rs
src/: main.rs
(+3 files in other folders)
