[workspace]
members = [
  "apps/media",
  "apps/talky-api",
  "apps/talky/src-tauri",
  "apps/talky-test",
  "apps/talky-soundhouse",
  "apps/leetcode",
  "libs/auth",
  "libs/data",

]
resolver = "2"
default-members = ["apps/media", "apps/talky-api"]

[workspace.dependencies]
anyhow = "1.0.97"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
