[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bins/server.rs"

[[bin]]
name = "game"
path = "src/bins/game.rs"

[dependencies]
dotenv = "0.15.0"
rspc = { version = "0.4.1", features = ["typescript", "rust"] }
rspc-axum = { version = "0.3.0", features = ["ws"] }
axum = { version = "0.7.9", features = ["multipart"] }

serde = "1.0.209"
specta = { version = "=2.0.0-rc.22", default-features = false }

sqlx = { version = "0.8.1", features = [
  "postgres",
  "runtime-tokio-rustls",
  "time",
] }
tokio = { version = "1.39.3", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower-http = { version = "0.6.2", features = ["cors"] }
jsonwebtoken = "9.3.0"
bcrypt = "0.17.0"
uuid = { version = "1.10.0", features = ["v4"] }
futures = "0.3.30"
ulid = "1.1.3"
textwrap = "0.16.1"
tokio-stream = { version = "0.1.16", features = ["sync"] }
serde_json = "1.0.128"
async-stream = "0.3.5"
async-trait = "0.1.82"
anyhow = "1.0.91"
thiserror = "2.0.12"
