[package]
name = "media"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.26"
md5 = "0.7.0"
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3.10.1"
thirtyfour = "0.35.0"
