[package]
name = "talky-soundhouse"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { workspace = true }
tokio-tungstenite = "0.26.2"
ulid = "1.2.0"
url = "2.5.4"
uuid = "1.16.0"
warp = "0.3.7"
webrtc = "0.12.0"
talky-auth = { path = "../../libs/auth" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4.40"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
thiserror = "2.0.12"
