[package]
name = "talky-soundhouse"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "export-types"
path = "src/bins/export-types.rs"

[[bin]]
name = "server"
path = "src/bins/server.rs"

[lib]
name = "lib"
path = "src/lib.rs"

[dependencies]
futures = "0.3.31"
futures-util = "0.3.31"
tokio = { workspace = true }
tokio-tungstenite = "0.26.2"
ulid = "1.2.0"
url = "2.5.4"
uuid = "1.16.0"
warp = "0.3.7"
webrtc = "0.12.0"
talky-data = { path = "../../libs/data" }
talky-auth = { path = "../../libs/auth" }
talky-services = { path = "../../libs/services" }
anyhow = { workspace = true }
serde = { workspace = true }
specta = { workspace = true, features = ["serde", "serde_json"] }
serde_json = { workspace = true }
chrono = "0.4.40"
dotenvy = "0.15.7"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
thiserror = "2.0.12"
specta-typescript = "0.0.9"
