[package]
name = "talky-test"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.22.0"
cpal = "0.15.3"
futures-util = "0.3.31"
hound = "3.5.1"
opus = "0.3.0"
serde_json = "1.0.140"
tokio = { workspace = true }
tokio-tungstenite = "0.26.2"
tungstenite = "0.26.2"
url = "2.5.4"
webrtc = "0.12.0"
