[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { workspace = true, features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
cpal = "0.15.3"
bytemuck = "1.22.0"
tungstenite = "0.26.2"
webrtc = "0.12.0"
tokio = { workspace = true }
reqwest = "0.12.14"
opus = "0.3.0"
futures-util = "0.3.31"
tokio-tungstenite = "0.26.2"
anyhow = { workspace = true }
tokio-util = "0.7.14"
tauri-plugin-store = "2.2.0"
